Fixed order of attributes mattering

--- a/test/expected/dev/index.html
+++ b/test/expected/dev/index.html
@@ -28,5 +28,9 @@
 
     <script data-main="src/js/config.js" src="require.js"></script>
 
+    <script data-main="js/config.js" src="app.min.js"></script>
+
+    <script src="app.min.js" data-main="js/config.js"></script>
+
   </body>
 </html>
