--- a/test/fixtures/index.html
+++ b/test/fixtures/index.html
@@ -46,5 +46,13 @@
     <script data-main="js/config.js" src="require.js"></script>
     <!-- /build -->
 
+    <!-- build:[src] app.min.js -->
+    <script data-main="js/config.js" src="require.js"></script>
+    <!-- /build -->
+
+    <!-- build:[src] app.min.js -->
+    <script src="require.js" data-main="js/config.js"></script>
+    <!-- /build -->
+
   </body>
 </html>
