add failing test in case of a full URL

--- a/test/fixtures/attr.html
+++ b/test/fixtures/attr.html
@@ -15,5 +15,9 @@
     <img src="/src/cat.png" alt="some image">
     <!-- /build -->
 
+    <!-- build:[href] https://somedomain.com/link -->
+    <a href="#" />
+    <!-- /build -->
+
   </body>
 </html>
