--- a/test/fixtures/attr/attr.processed.html
+++ b/test/fixtures/attr/attr.processed.html
@@ -11,7 +11,7 @@
 
     <img src="/images/cat.png" alt="some image">
 
-    <a href="https:/somedomain.com/link/#" />
+    <a href="https://somedomain.com/link" />
 
   </body>
 </html>
