Fix 'attr' blocktype asset URL concatenation issue
- https://github.com/dciccale/node-htmlprocessor/pull/9

--- a/test/fixtures/attr.html
+++ b/test/fixtures/attr.html
@@ -7,11 +7,11 @@
   </head>
   <body>
 
-    <!-- build:[src] /images -->
+    <!-- build:[src] /images/ -->
     <img alt="some image" src="/src/cat.png">
     <!-- /build -->
 
-    <!-- build:[src] /images -->
+    <!-- build:[src] /images/ -->
     <img src="/src/cat.png" alt="some image">
     <!-- /build -->
 
